@@ -54,6 +54,7 @@ Bugfixes:
 - SharedObjects support "getAttributes" (Jira APPSERVER-45)
 - mp3 files containing images can be played back (Jira APPSERVER-47)
 - fixed parsing of long strings (Jira APPSERVER-44)
+- fixed pausing and seeking audio-only flv files (Jira SN-17)
 
 
 Red5 0.6rc1 (2006-10-30)
